--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "openai>=2.15.0",
     "openai-agents>=0.6.8",
     "pypdf>=6.6.0",
+    "pydantic>=2.0.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
 ]
